bk_ida/gccida/c3/qty_sugg_compare
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2228:25: error: use of undeclared identifier 'qty_0'
v7 = ( int)( ( double)( qty_0[v3].size * qty_0[v3].freq * floor_log2_wide( qty_0[v3].n_refs)) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2228:42: error: use of undeclared identifier 'qty_0'
v7 = ( int)( ( double)( qty_0[v3].size * qty_0[v3].freq * floor_log2_wide( qty_0[v3].n_refs)) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2228:76: error: use of undeclared identifier 'qty_0'
v7 = ( int)( ( double)( qty_0[v3].size * qty_0[v3].freq * floor_log2_wide( qty_0[v3].n_refs)) 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2229:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v3].death - qty_0[v3].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2229:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v3].death - qty_0[v3].birth) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2233:22: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v8].size * qty_0[v8].freq * floor_log2_wide( qty_0[v8].n_refs)) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2233:39: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v8].size * qty_0[v8].freq * floor_log2_wide( qty_0[v8].n_refs)) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2233:73: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v8].size * qty_0[v8].freq * floor_log2_wide( qty_0[v8].n_refs)) 
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2234:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v8].death - qty_0[v8].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/local-alloc.c:2234:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v8].death - qty_0[v8].birth) 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/qty_sugg_compare/src/obj/local-alloc.o] Error 1
